Bug#35751 ndb_mgm and other mgmapi clients hang on OS X 10.5 intel  - Change NdbThread_Create function so that when 0 is specified as\    thread_stack_size, our default value of 64k is used.  - Change all threads (except ndbfs threads (and some tests)) to request default stack size